# servidor_mine

./: README.md
NativeTextApp/: .gitignore  README.md  build.sh  local.properties.template  settings.gradle
NativeTextApp/app/: CMakeLists.txt  build.gradle
NativeTextApp/app/src/main/: AndroidManifest.xml
NativeTextApp/app/src/main/cpp/: main.cpp
NativeTextApp/app/src/main/res/values/: strings.xml
